@startuml

hide circle
skinparam classAttributeIconSize 0

package "BudgetBuddy"{
package "Input Processing Logic"{
abstract class "{abstract} \n Command" {
    -String description
    +Command(String description)
    +abstract void execute(BudgetManager budgetManager) throws InvalidInputException
    +abstract boolean isExit()
}

' Placeholder for concrete command classes
class XYZCommand {
    +XYZCommand(String description)
    +void execute(BudgetManager budgetManager) throws InvalidInputException
    +boolean isExit()
}

' Relationship between Command and XYZCommand
"{abstract} \n Command" <|-- XYZCommand




' InputParser class (creates commands)
class InputParser {
    +Command parseInput(String userInput)
}

' InputManager class (manages input and execution)
class InputManager {
    -InputParser inputParser
    +InputManager(BudgetManager budgetManager)
    +void processInputLoop()
}
}

class ParserClasses{}

class BudgetManager {}
}
' Relationships
InputManager --> "1"InputParser : uses
InputParser --> "1"XYZCommand : creates
XYZCommand --> "1"BudgetManager : interacts with
InputManager --> "1"BudgetManager : contains
XYZCommand --> "1"ParserClasses : uses
@enduml